--- a/InventoryManagement.Api/InventoryManagement.Api.csproj
+++ b/InventoryManagement.Api/InventoryManagement.Api.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
@@ -14,10 +15,6 @@
 
   <ItemGroup>
     <ProjectReference Include="../InventoryManagement.Domain/InventoryManagement.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Contracts/" />
   </ItemGroup>
 
 </Project>
