--- a/InventoryManagement.Domain/InventoryManagement.Domain.csproj
+++ b/InventoryManagement.Domain/InventoryManagement.Domain.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
 <ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0"/>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+
 	</ItemGroup>
 </Project>
