--- a/InventoryManagement.Domain/InventoryManagement.Domain.csproj
+++ b/InventoryManagement.Domain/InventoryManagement.Domain.csproj
@@ -8,7 +8,7 @@
 
 <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
 
 	</ItemGroup>
 </Project>
