--- a/InventoryUI/inventory-ui/package.json
+++ b/InventoryUI/inventory-ui/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@material/web": "^2.2.0",
+    "@ng-select/ng-select": "^12.0.1",
     "ag-charts-angular": "^11.1.0",
     "ag-grid-angular": "^33.0.4",
     "bootstrap": "^5.3.3",
