--- a/.github/workflows/main_aminventory.yml
+++ b/.github/workflows/main_aminventory.yml
@@ -15,8 +15,9 @@ jobs:
     permissions:
       contents: read #This is required for actions/checkout
     env:
-      ANGULAR_PROJECT_PATH: './InventoryUI/inventory-ui'
-      DOTNET_PROJECT_PATH: './InventoryManagement.Api'
+      ANGULAR_PROJECT_PATH: ./InventoryUI/inventory-ui
+      DOTNET_PROJECT_PATH: ./InventoryManagement.Api
+      PUBLISH_DIR: ./publish
       
     steps:
       - uses: actions/checkout@v4
@@ -28,37 +29,41 @@ jobs:
 
       - name: Install Angular CLI
         run: npm install -g @angular/cli
-  
+
       - name: Install Angular dependencies
         run: npm install
         working-directory: ${{ env.ANGULAR_PROJECT_PATH }}
-  
-      - name: Build Angular App
+
+      - name: Build Angular app
         run: ng build --configuration production
         working-directory: ${{ env.ANGULAR_PROJECT_PATH }}
-  
+
       # Copy Angular dist to .NET wwwroot
-      - name: Copy Angular dist to wwwroot
+      - name: Copy Angular output to wwwroot
         run: |
           rm -rf ${{ env.DOTNET_PROJECT_PATH }}/wwwroot/*
-          cp -r ${{ env.ANGULAR_PROJECT_PATH }}/dist/browser/* ${{ env.DOTNET_PROJECT_PATH }}/wwwroot/
+          cp -r ${{ env.ANGULAR_PROJECT_PATH }}/dist/*/* ${{ env.DOTNET_PROJECT_PATH }}/wwwroot/
 
-      - name: Set up .NET Core
+        # Setup .NET SDK
+      - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.x'
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Restore .NET dependencies
+        run: dotnet restore ${{ env.DOTNET_PROJECT_PATH }}
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: Build .NET project
+        run: dotnet build ${{ env.DOTNET_PROJECT_PATH }} --configuration Release
 
-      - name: Upload artifact for deployment job
+      - name: Publish .NET project
+        run: dotnet publish ${{ env.DOTNET_PROJECT_PATH }} -c Release -o ${{ env.PUBLISH_DIR }}
+
+      - name: Upload publish folder as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: full-app
+          path: ${{ env.PUBLISH_DIR }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -89,3 +94,4 @@ jobs:
           package: .
 
           
+
