--- a/.github/workflows/main_aminventory.yml
+++ b/.github/workflows/main_aminventory.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Upload publish folder as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: full-app
+          name: .net-app
           path: ${{ env.PUBLISH_DIR }}
 
   deploy:
@@ -93,5 +93,6 @@ jobs:
           package: .
 
           
+
 
 
