--- a/InventoryManagement.Api/appsettings.json
+++ b/InventoryManagement.Api/appsettings.json
@@ -12,8 +12,8 @@
     "WhatsBusinessId":"668534095649605"
   },
   "ConnectionStrings": {
-    "Database": "Data Source=/Users/akshay/InventoryApi/database/{clientId}.db",
-    "UserDatabase":"Data Source=/Users/akshay/InventoryApi/database/user.db"
+    "Database": "Data Source={AppBase}app_data/{clientId}.db",
+    "UserDatabase":"Data Source={AppBase}app_data/user.db"
   },
   "JwtSettings":{
     "UrlKey":"JwtSettings:SecretKeyNew123JwtSettings:urlKey"
