--- a/InventoryManagement.Api/appsettings.json
+++ b/InventoryManagement.Api/appsettings.json
@@ -18,5 +18,12 @@
   "JwtSettings":{
     "UrlKey":"JwtSettings:SecretKeyNew123JwtSettings:urlKey"
   },
-  "AppUrl": "http://localhost:5050"
+  "AppUrl": "http://localhost:5050",
+  "PerplexityAI": {
+    "ApiKey": "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",
+    "BaseUrl": "https://api.perplexity.ai/chat/completions",
+    "Model": "sonar",
+    "Temperature": 0,
+    "MaxTokens": 100
+  }
 }
